# hw-jq

./: .ghc.environment.x86_64-darwin-8.4.4  .ghc.environment.x86_64-darwin-8.6.5  .ghc.environment.x86_64-darwin-8.8.3  LICENSE  README.md  hw-jq.cabal  hw-json-path-types.cabal
.circleci/: config.yml
app/: Main.hs
src/HaskellWorks/Data/Json/Path/: Types.hs
src/HaskellWorks/Jq/: Ast.hs  Lexer.hs  Parser.hs  Types.hs
test/HaskellWorks/Jq/: LexerSpec.hs  ParserSpec.hs
