name:                   hw-jq
version:                0.0.0.1
synopsis:               Memory efficient JSON parser
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-jq#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2017 John Ky
category:               Data, Conduit
build-type:             Simple
extra-source-files:     README.md,
                        corpus/5000B.bp,
                        corpus/5000B.ib,
                        corpus/5000B.json,
                        corpus/issue-0001.bp,
                        corpus/issue-0001.ib,
                        corpus/issue-0001.json,
                        corpus/issue-0001.md
cabal-version:          >= 1.22

executable hw-jq
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -msse4.2
  build-depends:        base                          >= 4          && < 5
                      , array
                      , ansi-wl-pprint
                      , attoparsec
                      , bytestring
                      , conduit
                      , containers
                      , dlist
                      , extra
                      , hw-jq
                      , mmap
                      , mono-traversable
                      , mtl
                      , parsec
                      , resourcet
                      , scientific
                      , text
                      , vector
                      , word8
  default-language:     Haskell2010

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Jq.Ast
                      , HaskellWorks.Jq.Lexer
                      , HaskellWorks.Jq.Parser
                      , HaskellWorks.Jq.Types

  build-depends:        base                          >= 4          && < 5
                      , array
                      , ansi-wl-pprint
                      , attoparsec
                      , bytestring
                      , conduit
                      , containers
                      , dlist
                      , extra
                      , mmap
                      , mono-traversable
                      , mtl
                      , parsec
                      , resourcet
                      , scientific
                      , text
                      , vector
                      , word8

  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -msse4.2

test-suite hw-jq-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Jq.LexerSpec
                      , HaskellWorks.Jq.ParserSpec
  build-depends:        base                          >= 4          && < 5
                      , array
                      , ansi-wl-pprint
                      , attoparsec
                      , bytestring
                      , conduit
                      , containers
                      , dlist
                      , extra
                      , hspec
                      , hw-jq
                      , mmap
                      , mono-traversable
                      , parsec
                      , resourcet
                      , scientific
                      , text
                      , vector
                      , word8
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-jq
