name:                   hw-json-path-types
version:                0.0.0.1
synopsis:               Memory efficient JSON parser
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-json-path-types#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2017 John Ky
category:               Data, Conduit
build-type:             Simple
extra-source-files:     README.md,
                        corpus/5000B.bp,
                        corpus/5000B.ib,
                        corpus/5000B.json,
                        corpus/issue-0001.bp,
                        corpus/issue-0001.ib,
                        corpus/issue-0001.json,
                        corpus/issue-0001.md
cabal-version:          >= 1.22

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Data.Json.Path.Types

  build-depends:        base                          >= 4          && < 5
                      , array
                      , ansi-wl-pprint
                      , attoparsec
                      , bytestring
                      , conduit
                      , containers
                      , dlist
                      , mmap
                      , mono-traversable
                      , resourcet
                      , text
                      , vector
                      , word8

  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -msse4.2

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-json-path-types
